test/expect/cmd.cc-gnu-c-bad-cmd.stderr.txt
^error: '--castxml-cc-gnu-c' compiler command failed:

 'cc-gnu-c-bad-cmd' '-E' '-dM' '-v' '.*/share/castxml/empty.c'
